@@ -1,3 +1,10 @@
+2011-09-14  Vincent Torri  <vincent.torri@gmail.com>
+
+	* psapi.h (LIST_MODULES_DEFAULT): New constant.
+	(LIST_MODULES_32BIT): New constant.
+	(LIST_MODULES_64BIT): New constant.
+	(LIST_MODULES_ALL): New constant.
+
 2011-09-12  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* wlanapi.h: Added WLAN_NOTIFICATION_ACM enumeration (patch from
